Make sure that the layout header title truncates correctly
We were using flex-shrink for that on the controls element, but since the parent is not flex anymore this stopped working.

--- a/src/definitions/inloco/layout.less
+++ b/src/definitions/inloco/layout.less
@@ -357,12 +357,12 @@
 }
 
 .inloco-layout__header-controls {
-  align-items: flex-end;
+  align-items: center;
   display: flex;
-  flex-shrink: 0;
   grid-column: 2;
   grid-row-start: 1;
   grid-row-end: 3;
+  min-width: max-content;
 
   > :not(:first-child) {
     margin-left: 16px;
